# raytracing

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  hittable.h  hittable_list.h  main.cpp  object.h  objectcollection.cpp  objectcollection.h  ray.h  sphere.h  vec3.h  vector3d.h
benchmark/: CMakeLists.txt  benchmark.cpp  results.txt
cmake/: CodeCoverage.cmake
include/raytracing/: aabb.h  array2d.h  bvhnode.h  camera.h  dielectric.h  lambertian.h  material.h  metal.h  object.h  objectcollection.h  random.h  ray.h  renderer.h  sphere.h  vec3.h  world.h
src/: CMakeLists.txt  add.cu  array2d.h  benchmark.cpp  bvhnode.cpp  bvhnode.h  camera.cpp  camera.h  dielectric.cpp  dielectric.h  imageitem.cpp  imageitem.h  lambertian.h  main.cpp  material.cpp  material.h  metal.cpp  metal.h  object.h  objectcollection.cpp  objectcollection.h  qml.qrc  random.h  ray.h  renderer.cpp  renderer.h  renderer_qt.cpp  renderer_qt.h  sphere.cpp  sphere.h  vec3.h  world.cpp  world.h
src/app/: CMakeLists.txt  main.cpp  qtmain.cpp
src/app/qml/: main.qml
src/lib/: CMakeLists.txt  aabb.cpp  bvhnode.cpp  camera.cpp  dielectric.cpp  lambertian.cpp  material.cpp  metal.cpp  objectcollection.cpp  renderer.cpp  sphere.cpp  world.cpp
src/qt/: CMakeLists.txt  imageitem.cpp  imageitem.h  renderer_qt.cpp  renderer_qt.h
test/: CMakeLists.txt  test_vec3.cpp
